Add items to cheat sheet

--- a/cheatsheet/cheatsheet.tex
+++ b/cheatsheet/cheatsheet.tex
@@ -11,6 +11,8 @@
 
 \usepackage{GS1}
 
+\setlength\parindent{0pt}
+
 \newcommand*\printean[3]{%
   \begin{tabular}{c}
     #1\\
@@ -26,7 +28,7 @@
 \begin{document}
 \pagenumbering{gobble}
 
-\section*{META}
+\section*{Sonderbefehle}
 \ean{Liste sortieren}{99900007}
 
 \section*{Getränke}
@@ -38,6 +40,11 @@
 \ean{Gemüse}{99900229}
 \ean{Cherrytomaten}{29040650}
 \ean{Paprika}{99900236}
+
+\vspace{1em}
+\ean{Erdäpfel}{24085229}
+\ean{Zwiebel}{24079884}
+\ean{Knoblauch}{24079877}
 
 \section*{Grundnahrungsmittel}
 \ean{Eier}{24015660}
